Edited wiki page through web user interface.

--- a/wiki/En.wiki
+++ b/wiki/En.wiki
@@ -1,5 +1,5 @@
 #summary English start page.
-#labels Featured,Lang-Ru
+#labels Featured,Lang-En
 
 *phpDays* - flexible php5 framework based on MVC pattern and ORM patterns.
 
