Edited wiki page through web user interface.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -11,6 +11,7 @@
  * [RuUpgrade Обновление] приложения с предыдущих версий
  * [RuStart Быстрый старт] поможет Вам создать первое приложение
  * [RuAnswers Ответы] на Ваши вопросы
+ * [http://code.google.com/p/phpdays/w/list?q=label:Lang-Ru Все страницы] на русском языке
 
 = Ежедневное использование =
 
