Edited wiki page through web user interface.

--- a/wiki/RuAnswers.wiki
+++ b/wiki/RuAnswers.wiki
@@ -6,3 +6,5 @@
 === Как задать вопрос? ===
 
 Чтобы задать свой вопрос, Вам следует написать комментарий внизу данной страницы.
+
+Так же Вы можете задавать вопросы в [http://groups.google.com/group/phpdays-ru русскоязычной группе поддержки] нашего проекта.
