Edited wiki page through web user interface.

--- a/wiki/RuAnswers.wiki
+++ b/wiki/RuAnswers.wiki
@@ -1,5 +1,6 @@
 #summary Ответы на Ваши вопросы.
 #labels Lang-Ru
+#sidebar Ru.
 
 На этой странице будут публиковаться часто задаваемые вопросы и ответы на них.
 
@@ -8,3 +9,7 @@
 Чтобы задать свой вопрос, Вам следует написать комментарий внизу данной страницы.
 
 Так же Вы можете задавать вопросы в [http://groups.google.com/group/phpdays-ru русскоязычной группе поддержки] нашего проекта.
+
+=== Онлайн чат ===
+
+<wiki:gadget url="http://etatus.googlepages.com/webmessages_global.xml" width="450" height="570" border="0" /> 
