Edited wiki page through web user interface.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -3,7 +3,7 @@
 
 *phpDays* - гибкий php5 фреймворк основанный на шаблонах проектирования MVC и ORM.
 
-= Начните сейчас =
+=== Начните сейчас ===
 
  * [RuAbout О проекте] _(возможности, требования)_
  * [RuChangelog Список изменений] _(изменения в версиях проекта)_
@@ -13,12 +13,12 @@
  * [RuAnswers Ответы] на Ваши вопросы
  * [http://code.google.com/p/phpdays/w/list?q=label:Lang-Ru Все страницы] на русском языке
 
-= Ежедневное использование =
+=== Ежедневное использование ===
 
  * [RuMvc MVC] describes about MVC patterns
  * [RuLib Библиотека] классов _(описание существующих классов)_
 
-= Для участников проекта _(разработчиков)_ =
+=== Для участников проекта _(разработчиков)_ ===
 
  * [RuCodingStyle Стиль кодирования] _(синтаксис для php, html, css, js и yaml файлов)_
  * [RuDoc Создание документации] _(синтаксис wiki страниц, именование страниц, переводы на другие языки)_
