--- a/wiki/En.wiki
+++ b/wiki/En.wiki
@@ -3,7 +3,7 @@
 
 *phpDays* - flexible php5 framework based on MVC pattern and ORM patterns.
 
-= Start now =
+=== Start now ===
 
  * [EnAbout About] project _(features, requirements)_
  * [EnChangelog Changelog] _(changes in project versions)_
@@ -13,12 +13,12 @@
  * [EnAnswers Answers] on you questions
  * [http://code.google.com/p/phpdays/w/list?q=label:Lang-En All pages] on english language
 
-= Every day use =
+=== Every day use ===
 
  * [EnMvc MVC] describes about MVC patterns
  * [EnLib Library] describes class reference
 
-= For project members =
+=== For project members ===
 
  * [EnCodingStyle Coding style] _(syntax of php, html, css, js and yaml files)_
  * [EnDoc Documentation] create _(wiki page syntax, page names, translations)_
