Edited wiki page through web user interface.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -5,7 +5,7 @@
 
 === Начните сейчас ===
 
- * [RuAbout О проекте] _(возможности, требования)_
+ * [RuAbout О проекте] _(возможности)_
  * [RuChangelog Список изменений] _(изменения в версиях проекта)_
  * [RuInstall Установка] фреймворка на Ваш сервер и настройка нового проекта
  * [RuUpgrade Обновление] приложения с предыдущих версий
