Edited wiki page through web user interface.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -15,8 +15,9 @@
 
 === Ежедневное использование ===
 
- * [RuMvc MVC] _(Model View Controller - основа phpDays)_
+ * [RuLibDaysController MVC] _(Model, View, Controller)_ - базовые понятия необходимые для работы с фреймворком
  * [RuLib Библиотека] классов _(описание существующих классов)_
+ * [RuAjax Ajax] в Вашем приложении
 
 === Для участников проекта _(разработчиков)_ ===
 
