Edited wiki page through web user interface.

--- a/wiki/RuAnswers.wiki
+++ b/wiki/RuAnswers.wiki
@@ -13,3 +13,5 @@
 === Онлайн чат ===
 
 <wiki:gadget url="http://etatus.googlepages.com/webmessages_global.xml" width="450" height="270" border="0" /> 
+
+<wiki:gadget url="http://www.google.com/ig/modules/googletalk.xml?java" width="320" height="460" border="0" /> 
