Edited wiki page through web user interface.

--- a/wiki/RuChangelog.wiki
+++ b/wiki/RuChangelog.wiki
@@ -4,6 +4,10 @@
 
 == Список изменений в версии 1.1 ==
 
+=== 1.1 beta2 ===
+
+ * r59 *engine* Delete auto-conversion all Ajax data to JSON
+
 === 1.1 beta1 ^(18 октября 2009)^ ===
 
  * _список изменений будет доступен чуть позже_
