--- a/wiki/EnAjax.wiki
+++ b/wiki/EnAjax.wiki
@@ -25,7 +25,7 @@ $(document).ready(function(){
 });
 }}}
 
-*ATTENTION*. Be sure to specify `dataType: 'json'` for best appearance.
+*ATTENTION* Be sure to specify `dataType: 'json'` for best appearance.
 
 Include script file in the template page `/vaw/www/myblog/app/View/layout/inde.html` within tag *head*:
 {{{
@@ -37,15 +37,18 @@ Now when the page loads will be run JS script, which connect to page `http://loc
 
 === Server side ===
 
-In your application, you should create a method with the end of `AjaxAction` instead of the usual `Action`. In this method, we return the data in an array, and they will automatically be converted to [http://en.wikipedia.org/wiki/JSON JSON].
+In your application, you should create a method with the end of `AjaxAction` instead of the usual `Action`. In this method, we return the data and this data send as response.
+
+*ATTENTION* If you have send data in [http://en.wikipedia.org/wiki/JSON JSON] format, than prepare the result array and convert array to JSON using function [http://php.net/json_encode json_encode()].
 
 Create file `/vaw/www/myblog/app/Controller/Blog.php` with method `postsAjaxAction()`:
 {{{
 class Myblog_Controller_Blog extends Days_Controller {
+  /** Return data in JSON */
   public function postsAjaxAction() {
     // obtain records from the database and return in the form of a multidimensional array
     $data = array('name'=>'Jimmi', 'age'=>23, 'country'=>'USA');
-    return $data;
+    return json_encode($data);
   }
 }
 }}}
