--- a/wiki/EnLib.wiki
+++ b/wiki/EnLib.wiki
@@ -4,19 +4,19 @@
 
 === System engine ===
 
- * MVC ([RuLibDaysModel Days_Model], [RuLibDaysView Days_View], [RuLibDaysController Days_Controller]) - basic concepts necessary to work with framework
- * [RuLibDaysConfig Days_Config] - work with the configuration of the site
- * [RuLibDaysDb Days_Db] - work with database
+ * MVC ([EnLibDaysModel Days_Model], [EnLibDaysView Days_View], [EnLibDaysController Days_Controller]) - basic concepts necessary to work with framework
+ * [EnLibDaysConfig Days_Config] - work with the configuration of the site
+ * [EnLibDaysDb Days_Db] - work with database
  * [EnLibDaysDbTable Days_Db_Table] - implementation ORM representation of database tables
- * [RuLibDaysEngine Days_Engine] - starting point of entry
- * [RuLibDaysLog Days_Log] - logging errors and debugging information
- * [RuLibDaysRequest Days_Request] - request from the user's browser
- * [RuLibDaysResponse Days_Response] - response to the user's browser
- * [RuLibDaysUrl Days_Url] - work with the url address
+ * [EnLibDaysEngine Days_Engine] - starting point of entry
+ * [EnLibDaysLog Days_Log] - logging errors and debugging information
+ * [EnLibDaysRequest Days_Request] - request from the user's browser
+ * [EnLibDaysResponse Days_Response] - response to the user's browser
+ * [EnLibDaysUrl Days_Url] - work with the url address
 
 === Under development ===
 
- * [RuLibDaysAcl Days_Acl] _(Aceess Control List)_ - delineation of rights of access to sections of the site
- * [RuLibDaysFilter Days_Filter] - filtering data coming from the user _(also known as validation or verification of data)_
- * [RuLibDaysForm Days_Form] - processing of data coming from html forms
- * [RuLibDaysUser Days_User] - work with user _(authorization, authentication, end of session)_
+ * [EnLibDaysAcl Days_Acl] _(Aceess Control List)_ - delineation of rights of access to sections of the site
+ * [EnLibDaysFilter Days_Filter] - filtering data coming from the user _(also known as validation or verification of data)_
+ * [EnLibDaysForm Days_Form] - processing of data coming from html forms
+ * [EnLibDaysUser Days_User] - work with user _(authorization, authentication, end of session)_
