link to multisite

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -18,6 +18,7 @@
  * [RuLibDaysController MVC] _(Model, View, Controller)_ - базовые понятия необходимые для работы с фреймворком
  * [RuLib Библиотека] классов _(описание существующих классов)_
  * [RuAjax Ajax] в Вашем приложении
+ * [RuMiltisite Мультисайт] - создание в рамках одного сайта нескольких подсайтов
 
 === Для участников проекта _(разработчиков)_ ===
 
