Edited wiki page through web user interface.

--- a/wiki/RuMiltisite.wiki
+++ b/wiki/RuMiltisite.wiki
@@ -1,5 +1,6 @@
 #summary Мультисайт.
 #labels Lang-Ru
+#sidebar Ru
 
 Если на сайте нужно открыть сложный раздел со множеством возможностей, то разумнее всего сделать его как отдельный проект. Затем этот проект можно интегрировать в другой сайт. Получим подобие конструктора Lego, из которого можно собрать один сайт на основе других проектов.
 
