Edited wiki page through web user interface.

--- a/wiki/RuAbout.wiki
+++ b/wiki/RuAbout.wiki
@@ -1,5 +1,6 @@
 #summary О проекте phpDays.
 #labels Lang-Ru
+#sidebar Ru
 
 С *phpDays* Вы сможете ускорить и упростить процесс создания веб сайта. При этом сайт станет легче поддерживать и дорабатывать.
 
