Edited wiki page through web user interface.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -15,7 +15,7 @@
 
 === Ежедневное использование ===
 
- * [RuLibDaysController MVC] _(Model, View, Controller)_ - базовые понятия необходимые для работы с фреймворком
+ * [RuMvc MVC] _(Model, View, Controller)_ - базовые понятия необходимые для работы с фреймворком
  * [RuLib Библиотека] классов _(описание существующих классов)_
  * [RuAjax Ajax] в Вашем приложении
  * [RuMiltisite Мультисайт] - использование одного сайта как сервиса другого сайта
