Edited wiki page through web user interface.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -1,7 +1,7 @@
 #summary Русская стартовая страница.
 #labels Featured,Lang-Ru
 
-*phpDays* - гибкий php5 фреймворк основанный на шаблонах проектирования MVC и ORM.
+*phpDays* - гибкий php5 фреймворк основанный на шаблонах проектирования [RuMvc MVC] и ORM.
 
 === Начните сейчас ===
 
@@ -22,5 +22,6 @@
 
 === Для участников проекта _(разработчиков)_ ===
 
+ * [RuCoding Вступление] в команду разработчиков
  * [RuCodingStyle Стиль кодирования] _(синтаксис для php, html, css, js и yaml файлов)_
  * [RuDoc Создание документации] _(синтаксис wiki страниц, именование страниц, переводы на другие языки)_
