--- a/wiki/RuCoding.wiki
+++ b/wiki/RuCoding.wiki
@@ -1,5 +1,6 @@
 #summary Вступление в команду разработчиков.
 #labels Lang-Ru
+#sidebar Ru
 
 Если Вы изучили проект, и чувствуете в себе силы и желание помочь развитию проекта, тогда прочитайте следующие правила.
 
