--- a/wiki/RuCoding.wiki
+++ b/wiki/RuCoding.wiki
@@ -1,4 +1,4 @@
-#summary Вступление в команду разработчиков.
+#summary Подготовка к работе над проектом.
 #labels Lang-Ru
 #sidebar Ru
 
@@ -11,3 +11,30 @@
  * после рассмотрения Вашей кандидатуры Вы получите письмо на емейл о ходе добавления Вас в проект _(если ответ не придет в течение 3-х дней, отправьте запрос повторно)_
  * если все прошло успешно - то Вы станете участником проекта и сможете делать то, что не доступно другим _(сможете изменять код проекта, изменять документацию, изменять задачи проекта)_
  * Вы так же будете отображены в списке [http://code.google.com/p/phpdays/people/list участников проекта phpDays] _(не забудьте добавить эту ссылку в Ваше резюме)_
+
+=== Общие сведения о сайте ===
+
+ * [http://code.google.com/p/phpdays/downloads/list Downloads] - страница загрузки, где доступны рабочие копии проекта, предназначенные для конечного пользователя
+ * [http://code.google.com/p/phpdays/w/list Wiki] - документация проекта
+ * [http://code.google.com/p/phpdays/issues/list Issues] - задачи проекта и список найденных ошибок
+ * [http://code.google.com/p/phpdays/source/list Source] - информация о SVN репозитории, истории изменений файлов проекта
+
+=== Загрузка рабочей копии проекта ===
+
+ * скачайте и установите SVN-клиент для работы с файлами проекта
+ * загрузите рабочую копию проекта _(смотрите подробности на странице [http://code.google.com/p/phpdays/source/checkout Checkout])_
+ * если Вы ранее не работали с Subversion, то уделите время на его изучение
+
+=== Правила внесение изменений _(SVN commit)_ ===
+
+Оформляйте комментарии в следующем виде
+ * `Fix #1234: Название исправленной ошибки` - для исправления ошибки номер `1234`. Если ошибки нет в [http://code.google.com/p/phpdays/issues/list Issues] - Вам следует добавить информацию об этой ошибке, а затем произвести `SVN commit`
+ * пишите каждую ошибку в отдельной строке. В конце каждой строки ставьте точку
+
+=== Проверяйте сами себя ===
+
+Настройте [http://blogs.sun.com/netbeansphp/entry/recent_improvements_in_phpunit_support PHPUnit] тесты. Это позволит Вам создавать тесты, гарантирующие что новое исправление в коде не поломало что-то другое. Только после этого следует производить `SVN commit`.
+
+=== Пишите качественный код ===
+
+Прочитайте о [RuCodingStyle стиле кодирования], принятом в нашем проекте. Следование единому стилю позволяем всем разработчикам общаться на едином, понятном всем языке.
