--- a/wiki/RuMvc.wiki
+++ b/wiki/RuMvc.wiki
@@ -1,5 +1,6 @@
 #summary Что такое MVC.
 #labels Lang-Ru
+#sidebar Ru
 
 [http://ru.wikipedia.org/wiki/Model-View-Controller MVC] - архитектурное решение, позволяющее отделить разные части приложения друг от друга. Благодаря такому подходу становится проще понять проект и обучить его особенностям новых участников.
 
