Fix bug in base path.

--- a/wiki/RuMiltisite.wiki
+++ b/wiki/RuMiltisite.wiki
@@ -10,7 +10,7 @@
 
 Проект форума будет расположен в директории `/var/www/forum`.
 
-Теперь подготовьте Ваш форум для включения в раздел другого сайта. Создайте новый файл конфигурации `/var/www/forum/app/config/myblog_development.yaml`. Отредактируйте его для работы с базой данных Вашего приложения. Установите опцию `url/base: forum`.
+Теперь подготовьте Ваш форум для включения в раздел другого сайта. Создайте новый файл конфигурации `/var/www/forum/app/config/myblog_development.yaml`. Отредактируйте его для работы с базой данных Вашего приложения. Установите опцию `url/base: myblog/forum`.
 
 Все простые разделы сайта Вы реализуете как и прежде - путем создания отдельного [RuController контроллера].
 
