Добавлен список изменений для версии 1.1 beta1

--- a/wiki/RuChangelog.wiki
+++ b/wiki/RuChangelog.wiki
@@ -10,7 +10,7 @@
 
 === 1.1 beta1 ^(18 октября 2009)^ ===
 
- * _список изменений будет доступен чуть позже_
+ * r19-r20 Добавлена поддержка [http://templum.googlecode.com шаблонизатора Templum].
 
 === Архив версий ===
 
