--- a/wiki/RuChangelog1_0.wiki
+++ b/wiki/RuChangelog1_0.wiki
@@ -3,11 +3,11 @@
 #sidebar Ru
 
 
-== Версия 1.0 - ''9 октября 2009'' ==
+== Version 1.0 - ''9 октября 2009'' ==
 
-Первый выпуск включает в себя поддержку [wiki:RU/lib/Days_Db_Table ORM], [wiki:RU/lib/Days_Log логирование], созданную структуру проектов, примеры приложений.
+First release include ORM implementation, logging, stable project structure, sample applications.
 
-=== 1.0 финальный выпуск - ''9 октября 2009'' ===
+=== 1.0 final release - ''9 октября 2009'' ===
 
  * improve method `find()` for "one" row: return null if row not exists
  * fix error in method `find()` for "one" row (if row not exists)
@@ -16,14 +16,14 @@
  * even small editing the blog-example '''(xaoc)'''
  * presented in the working condition the blog-example '''(xaoc)'''
 
-=== 1.0 кандидат к выпуску 2 - ''7 октября 2009'' ===
+=== 1.0 release candidate 2 - ''7 октября 2009'' ===
 
  * improve `profile()` method in [wiki:RU/lib/Days_Log Days_Log] class ''(send message only if firephp logging enabled)''
  * fix bug with incorrect definition controller/action with empty base path
  * fix incorrect replace pathes with empty base path
  * fix show warning on servers without default timezone
 
-=== 1.0 кандидат к выпуску - ''6 октября 2009'' ===
+=== 1.0 release candidate - ''6 октября 2009'' ===
 
  * add profiling into [wiki:RU/lib/Days_Db_Table Days_Db_Table] class
  * add `child` and `parent` magic fields into [wiki:RU/lib/Days_Db_Row Days_Db_Row]
@@ -48,59 +48,58 @@
  * change project description to ''"php:Days - flexible php5 framework"''
 
 === 1.0 beta 3 - ''21 сентября 2009'' ===
-
- * изменение метода `info()` в Days_Db_Table для возврата значения "null" если колонка не существует
- * реализация связей 1x1, 1xN, MxN в Days_Db_Table __(требуется тщательное тестирование)__
- * изменение метода `info()` в Days_Db_Table для возвращения информации об указанной нами таблице
- * рефакторинг кода в Days_Engine
- * Days_Log: создана реализация метода `logtoSqlite()` '''(xaoc)'''
- * упрощения формата вывода `FirePhp` '''(xaoc)'''
- * улучшение в Days_Log: добавлены уровни ошибок (константы)
- * исправление в Days_Log: добавлен метод `logtoSqlite` для записи ошибок в sqlite
- * добавлены поясняющие комментарии в файлах конфигураций приложений
- * добавлен конфигурационный параметр "log/level"
- * создана директория "View/block" в приложениях для размещения блоков
- * рефакторинг кода в Days_Controller, Days_Engine: передача имени шаблона при создании объекта контроллера
- * рефакторинг кода в Days_Controller: изменена логика в методе "getContent" - возвращает содержимое (контент) без каркаса
- * добавлен метод "toArray" для возврата всех данных в виде массива в Days_Db_Rowset
- * исправление в Days_Db_Table: изменено создание объекта Zend_Db внутри класса
- * исправление в Days_Db_Row: для несуществующей колонки выкидывать исключение
- * исправление в Days_Db_Row в проверке структуры таблицы
- * улучшение в Days_Db_Row для работы с таблицей "сама с собой"
- * добавлена поддержка методов с окончаниями `AjaxAction` и `PostAction` в контроллерах
+ * change method info() in [wiki:EN/lib/Days_Db_Table Days_Db_Table] for return "null" if column not exists
+ * implement 1x1, 1xN, MxN relations in [wiki:EN/lib/Days_Db_Table Days_Db_Table] (need full tests)
+ * change method info() in [wiki:EN/lib/Days_Db_Table Days_Db_Table] for return info about specified table
+ * refactoring code into [wiki:EN/lib/Days_Engine Days_Engine] class
+ * [wiki:EN/lib/Days_Log Days_Log]: added implementation of the method `logtoSqlite()` '''(xaoc)'''
+ * slightly changed the format of the output `FirePhp` '''(xaoc)'''
+ * improve Days_Log: add error levels
+ * fix bug in [wiki:EN/lib/Days_Log Days_Log]: add method `logtoSqlite` for sqlite logging
+ * add comments into configuration files
+ * add configuration parameter "log/level"
+ * add "View/block" folder into applications for template blocks
+ * refactoring of [wiki:EN/lib/Days_Controller Days_Controller], [wiki:EN/lib/Days_Engine Days_Engine]: pass content template name on controller object creation
+ * refactoring of [wiki:EN/lib/Days_Controller Days_Controller]: change logic in "getContent" method - return content without layout
+ * added method "toArray" for return all data as arrays in [wiki:EN/lib/Days_Db_Rowset Days_Db_Rowset]
+ * fix bug in [wiki:EN/lib/Days_Db_Table Days_Db_Table]: replace creating object from Zend_Db to inner in class
+ * fix bug in [wiki:EN/lib/Days_Db_Row Days_Db_Row] for not existing columns catch exception
+ * fix bug in [wiki:EN/lib/Days_Db_Row Days_Db_Row] in check table structure
+ * improve [wiki:EN/lib/Days_Db_Row Days_Db_Row] to work with parent and itself table
+ * add support `AjaxAction` and `PostAction` in controllers
 
 === 1.0 beta 2 - ''8 сентября 2009'' ===
 
- * исправление #12: ошибка при загрузке файла конфигурации ''(критическая ошибка)''
+ * fix #12: bug on load configuration file
 
 === 1.0 beta 1 - ''4 сентября 2009'' ===
 
- * добавлена поддержка ORM в виде класса Days_Db_Table ''(Active Record и Date Mapper паттерны)''
- * добавлен тестовый проект блога `apps/blog`
- * перемещено прежнее тестовое приложения с `app` в `apps/new`
- * обновлена библиотека Zend Framework до версии 1.9.2
- * исправлены ошибки
+ * added ORM support as [wiki:EN/lib/Days_Db_Table Days_Db_Table] ''(Active Record and Date Mapper patterns)''
+ * added `apps/blog` directory for develop blog application
+ * moved pld test application from `app` to `apps/new`
+ * update Zend Framework library to version 1.9.2
+ * fix bugs
 
 === 1.0 alpha 5 - ''17 августа 2009'' ===
 
- * добавлен новый компонент [wiki:RU/quickstart/model Days_Db_Table] (используется для создания моделей)
- * обновлен Zend Framework до версии 1.9.1
- * изменение #1: добавлен обязательный префикс к имени класса модели
+ * added new component [wiki:EN/lib/Days_Db_Table Days_Db_Table] (user for create models)
+ * upgrade Zend Framework to version 1.9.1
+ * fix #1: add prefix for model class name
 
 === 1.0 alpha 4 - ''10 августа 2009'' ===
 
- * уменьшен размер файла для загрузки ''(удалены неиспользуемые компоненты Zend Framework)''
+ * reduce release file size ''(removed not used Zend Framework components)''
 
 === 1.0 alpha 3 - ''9 августа 2009'' ===
 
- * [wiki:RU/advanced/errorpage отображение страницы ошибки] (404 - страниц не найдена; перенаправление на другую страницу и т.д.)
- * добавлена [wiki:RU/quickstart/ajax поддержка Ajax]
- * исправление #6: Возвращение параметра из URL по числовому индексу
+ * [wiki:EN/advanced/errorpage show error page] (404 - page not found; redirect; etc)
+ * [wiki:EN/quickstart/ajax ajax support] added
+ * fix #6: Return part of URL adress by parameter number
 
 === 1.0 alpha 2 - ''30 июля 2009'' ===
 
- * изменена структура проекта. Теперь следует создавать `app/Controller/Index.php` вместо прежнего `app/controller/IndexController.php`. Смотрите [wiki:RU/quickstart/controller обновленное руководство]. Изменения коснулись так же [wiki:RU/quickstart/model моделей] и [wiki:RU/quickstart/view представления]
+ * you should now create a `app/Controller/Index.php` instead of the old `app/controller/IndexController.php` to change the structure of the project. See the [wiki:EN/quickstart/controller updated manual]. These changes refer to [wiki:EN/quickstart/model model] and [wiki:EN/quickstart/view presentation]
 
 === 1.0 alpha 1 - ''23 июля 2009'' ===
 
- * первая версия фреймворка
+ * initial release
