Edited wiki page through web user interface.

--- a/wiki/EnChangelog1_0.wiki
+++ b/wiki/EnChangelog1_0.wiki
@@ -10,21 +10,21 @@ First release include ORM implementation, logging, stable project structure, sam
 
  * improve method `find()` for "one" row: return null if row not exists
  * fix error in method `find()` for "one" row (if row not exists)
- * fix bug with method `create()` in [ENLibDaysDbRowset Days_Db_Rowset] and [EnLibDaysDbTable Days_Db_Table]
+ * fix bug with method `create()` in [EnLibDaysDbRowset Days_Db_Rowset] and [EnLibDaysDbTable Days_Db_Table]
  * bring to a working state of php-templates *(xaoc)*
  * even small editing the blog-example *(xaoc)*
  * presented in the working condition the blog-example *(xaoc)*
 
 === 1.0 release candidate 2 - _7 October 2009_ ===
 
- * improve `profile()` method in [ENLibDaysLog Days_Log] class _(send message only if firephp logging enabled)_
+ * improve `profile()` method in [EnLibDaysLog Days_Log] class _(send message only if firephp logging enabled)_
  * fix bug with incorrect definition controller/action with empty base path
  * fix incorrect replace pathes with empty base path
  * fix show warning on servers without default timezone
 
 === 1.0 release candidate - _6 October 2009_ ===
 
- * add profiling into  [ENLibDaysDbTable Days_Db_Table] class
+ * add profiling into [EnLibDaysDbTable Days_Db_Table] class
  * add `child` and `parent` magic fields into [ENLibDaysDbRow Days_Db_Row]
  * add `profile()` method into [ENLibDaysLog Days_Log]
  * update Spyc yaml parser to version 0.4.5
