--- a/wiki/EnChangelog1_0.wiki
+++ b/wiki/EnChangelog1_0.wiki
@@ -26,20 +26,20 @@ First release include ORM implementation, logging, stable project structure, sam
 
  * add profiling into [EnLibDaysDbTable Days_Db_Table] class
  * add `child` and `parent` magic fields into [ENLibDaysDbRow Days_Db_Row]
- * add `profile()` method into [ENLibDaysLog Days_Log]
+ * add `profile()` method into [EnLibDaysLog Days_Log]
  * update Spyc yaml parser to version 0.4.5
  * change applications into "apps" directory (add directories "app" and "public")
  * add smarty plugin `helper` for call helpers into templates
  * add support of base path (for work site in directory)
  * reworked and presented in the working condition the blog-example *(xaoc)*
- * add method `_quote` in [ENLibDaysDbTable Days_Db_Table] for quote identifiers
- * quote column names and table names in join statements (method `find()` in [ENLibDaysDbTable Days_Db_Table])
+ * add method `_quote` in [EnLibDaysDbTable Days_Db_Table] for quote identifiers
+ * quote column names and table names in join statements (method `find()` in [EnLibDaysDbTable Days_Db_Table])
  * add prefix to model classes. _Change this into you projects_
  * separetely handle `PostAction` before execute specified action
  * reworked and presented in the working condition the blog-example *(xaoc)*
  * fix bug with connection View in ORM (link MxN), added shielding behalf View *(xaoc)*
  * change application examples (fix bugs)
- * fix bug in [ENLibDaysEngine DaysEngine] for loading file in `CamelCase`
+ * fix bug in [EnLibDaysEngine DaysEngine] for loading file in `CamelCase`
  * fix bug #9: use native php templates by default
  * add new template engine - Dwoo
  * code cleanup and refactoring
@@ -48,24 +48,24 @@ First release include ORM implementation, logging, stable project structure, sam
 
 === 1.0 beta 3 - _21 September 2009_ ===
 
- * change method info() in [ENlibDaysDbTable Days_Db_Table] for return "null" if column not exists
- * implement 1x1, 1xN, MxN relations in [ENLibDaysDbTable Days_Db_Table] (need full tests)
- * change method info() in [ENLibDaysDbTable Days_Db_Table] for return info about specified table
- * refactoring code into [ENLibDaysEngine DaysEngine] class
+ * change method info() in [EnlibDaysDbTable Days_Db_Table] for return "null" if column not exists
+ * implement 1x1, 1xN, MxN relations in [EnLibDaysDbTable Days_Db_Table] (need full tests)
+ * change method info() in [EnLibDaysDbTable Days_Db_Table] for return info about specified table
+ * refactoring code into [EnLibDaysEngine DaysEngine] class
  * [ENLibDaysLog Days_Log]: added implementation of the method `logtoSqlite()` *(xaoc)*
  * slightly changed the format of the output `FirePhp` *(xaoc)*
  * improve Days_Log: add error levels
- * fix bug in [ENLibDaysLog DaysLog]: add method `logtoSqlite` for sqlite logging
+ * fix bug in [EnLibDaysLog DaysLog]: add method `logtoSqlite` for sqlite logging
  * add comments into configuration files
  * add configuration parameter "log/level"
  * add "View/block" folder into applications for template blocks
- * refactoring of [ENLibDaysController Days_Controller], [ENLibDaysEngine Days_Engine]: pass content template name on controller object creation
- * refactoring of [ENLibDaysController Days_Controller]: change logic in "getContent" method - return content without layout
- * added method "toArray" for return all data as arrays in [ENLibDaysDbRowset Days_Db_Rowset]
- * fix bug in [ENLibDaysDbTable Days_Db_Table]: replace creating object from Zend_Db to inner in class
- * fix bug in [ENLibDaysDbRow Days_Db_Row] for not existing columns catch exception
- * fix bug in [ENLibDaysDbRow Days_Db_Row] in check table structure
- * improve [ENLibDaysDbRow Days_Db_Row] to work with parent and itself table
+ * refactoring of [EnLibDaysController Days_Controller], [ENLibDaysEngine Days_Engine]: pass content template name on controller object creation
+ * refactoring of [EnLibDaysController Days_Controller]: change logic in "getContent" method - return content without layout
+ * added method "toArray" for return all data as arrays in [EnLibDaysDbRowset Days_Db_Rowset]
+ * fix bug in [EnLibDaysDbTable Days_Db_Table]: replace creating object from Zend_Db to inner in class
+ * fix bug in [EnLibDaysDbRow Days_Db_Row] for not existing columns catch exception
+ * fix bug in [EnLibDaysDbRow Days_Db_Row] in check table structure
+ * improve [EnLibDaysDbRow Days_Db_Row] to work with parent and itself table
  * add support `AjaxAction` and `PostAction` in controllers
 
 === 1.0 beta 2 - _8 September 2009_ ===
@@ -74,7 +74,7 @@ First release include ORM implementation, logging, stable project structure, sam
 
 === 1.0 beta 1 - _4 September 2009_ ===
 
- * added ORM support as [ENLibDaysDbTable Days_Db_Table] _(Active Record and Date Mapper patterns)_
+ * added ORM support as [EnLibDaysDbTable Days_Db_Table] _(Active Record and Date Mapper patterns)_
  * added `apps/blog` directory for develop blog application
  * moved pld test application from `app` to `apps/new`
  * update Zend Framework library to version 1.9.2
@@ -82,7 +82,7 @@ First release include ORM implementation, logging, stable project structure, sam
 
 === 1.0 alpha 5 - _17 August 2009_ ===
 
- * added new component [ENLibDaysDbTable Days_Db_Table] (user for create models)
+ * added new component [EnLibDaysDbTable Days_Db_Table] (user for create models)
  * upgrade Zend Framework to version 1.9.1
  * fix #1: add prefix for model class name
 
@@ -92,13 +92,13 @@ First release include ORM implementation, logging, stable project structure, sam
 
 === 1.0 alpha 3 - _9 August 2009_ ===
 
- * [ENAdvancedErrorpage show error page] (404 - page not found; redirect; etc)
- * [ENQuickstartAjax ajax support] added
+ * [EnAdvancedErrorpage show error page] (404 - page not found; redirect; etc)
+ * [EnQuickstartAjax ajax support] added
  * fix #6: Return part of URL adress by parameter number
 
 === 1.0 alpha 2 - _30th July 2009_ ===
 
- * you should now create a `app/Controller/Index.php` instead of the old `app/controller/IndexController.php` to change the structure of the project. See the [ENQuickstartController updated manual]. These changes refer to [ENQuickstartModel model] and [ENQuickstartView presentation]
+ * you should now create a `app/Controller/Index.php` instead of the old `app/controller/IndexController.php` to change the structure of the project. See the [EnQuickstartController updated manual]. These changes refer to [EnQuickstartModel model] and [EnQuickstartView presentation]
 
 === 1.0 alpha 1 - _23 July 2009_ ===
 
