Edited wiki page through web user interface. Added Lang-En label

--- a/wiki/EnCoding.wiki
+++ b/wiki/EnCoding.wiki
@@ -1,4 +1,5 @@
 #summary Getting Involved in the Project.
+#labels Lang-En
 #sidebar En
 
 If you've become familiar with the project and feel confident and interested in the participating in it, then read the following guidelines.
